[project]
name = "benchmarking-dqc-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dqc-simulator>=0.2.5",
    "matplotlib>=3.10.9",
    "memory-profiler>=0.61.0",
    "pytest>=9.1.1",
]

[[tool.uv.index]]
url = "https://pypi.netsquid.org/"

[tool.uv.sources]
dqc-simulator = { git = "https://github.com/km-campbell/dqc_simulator.git", branch = "processify" }
